Fix UI weirdness for More dropdown menu
Needed to switch dropdown to Absolute along with the main title and
content when the edit field came in focus; mixing position: elements
causes problems for z-index (the menu got hidden behind the content).

--- a/www/res/css/styles.css
+++ b/www/res/css/styles.css
@@ -144,6 +144,8 @@ input[type="file"] {
     overflow: hidden;
     text-overflow: ellipsis;
     width:100%;
+    position: fixed;
+    z-index: 999;
 }
 .small-pic {
     float: left;
@@ -279,6 +281,7 @@ header h3 {
     white-space: nowrap;
 }
 .fixfixed .scroller-tb,
+.fixfixed .dropdown,
 .fixfixed .main_title {
     position:absolute;
 }
@@ -304,6 +307,7 @@ header h3 {
     width: 95%;
 }
 
+/*
 .toolbar {
     box-shadow: inset 0 -1px #9daca9, 0 1px #d6dcdb;
     vertical-align: top;
@@ -324,6 +328,7 @@ header h3 {
 .toolbar-button {
     width: 100%;
 }
+*/
 
 .topcoat-icon--back {
     background: url("images/back_light.svg") no-repeat;
@@ -1168,7 +1173,7 @@ background-color: #fff;
     display: none;
     position: fixed;
     right: 103px;
-    z-index: 1;
+    z-index: 2147483647; /* on top */
 	background: #1F7BA5;
 	border: 3px solid #fff;
     -webkit-box-shadow: 0px 6px 18px 1px rgba(0,0,0,0.75);
